k8s/foreman-exporter-custom-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
     app: foreman-exporter
  name: foreman-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foreman-exporter
  template:
    metadata:
      labels:
        app: foreman-exporter
    spec:
      containers:
      - image: marcinbojko/foreman_exporter
        name: foreman-exporter-pod
        imagePullPolicy: Always
        ports:
          - name: http-8000-pods
            containerPort: 8000
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 2
        resources:
          limits:
            cpu: 400m
            memory: 200Mi
          requests:
            cpu: 10m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: foreman-exporter
  labels:
    app: foreman-exporter
spec:
  selector:
    app: foreman-exporter
  type: ClusterIP
  ports:
  - name: metrics
    port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foreman-exporter
  labels:
    app: foreman-exporter
spec:
  rules:
  - host: foreman-exporter.sample.com
    http:
      paths:
      - pathType: Prefix
        path: "/metrics"
        backend:
          service:
            name: foreman-exporter
            port:
              number: 8000
